--- a/Views/Blogs/Create.cshtml
+++ b/Views/Blogs/Create.cshtml
@@ -1,43 +1,68 @@
-﻿@model BrainStorm.Models.Article
+﻿@model BrainStorm.ViewModel.ArticleViewModel
 
 @{
     ViewData["Title"] = "Create";
 }
 
-<form asp-action="Create">
+
+<form asp-action="Create" method="post" enctype="multipart/form-data">
     <div class="row">
         <div class="col-md-4">
-
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div>
-                <label asp-for="Title" class="control-label"></label>
-                <input asp-for="Title" class="form-control" />
-                <span asp-validation-for="Title" class="text-danger"></span>
+            <div class="form-group">
+                <label asp-for="Article.Title" class="control-label"></label>
+                <input asp-for="Article.Title" class="form-control" />
+                <span asp-validation-for="Article.Title" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ArticleCategory" class="control-label"></label>
-                <input asp-for="ArticleCategory" class="form-control" />
-                <span asp-validation-for="ArticleCategory" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <img src="~/images/article/default_article.jpg" id="previewImage" alt="Alternate Text" width="200" height="200" />
-                <input type="file" id="uploadImage" name="files" width="200" height="200" multiple />
-                <span asp-validation-for="Picture" class="text-danger"></span>
+                <label asp-for="Category" class="control-label"></label>
+                <select name="CategoryId" class="form-control">
+                    @foreach (var category in Model.Category)
+                    {
+                        <option value="@category.Id">@category.Name</option>
+                    }
+                </select>
+                @*<a> @await Component.InvokeAsync("CategoryComponent")</a>*@
             </div>
         </div>
 
-    </div>
-    <div class="form-group">
-        <label asp-for="Content" class="control-label"></label>
-        <textarea asp-for="Content" id="editor"></textarea>
-        <span asp-validation-for="Content" class="text-danger"></span>
-    </div>
+        <div class="col-md-4 pull-right">
 
+            <div class="form-group pull-right">
+                <img src="~/images/article/default_article.jpg" id="previewImage" alt="Alternate Text" width="200" height="200" />
+                <input type="file" id="uploadImage" name="files" width="200" height="200" multiple />
+                <span asp-validation-for="Article.Picture" class="text-danger"></span>
+            </div>
+        </div>
+    </div>
     <div class="form-group">
-        <input type="submit" value="Create" class="btn btn-success" />
+        <label asp-for="Article.Content" class="control-label"></label>
+        <textarea asp-for="Article.Content" id="editor"></textarea>
+        <span asp-validation-for="Article.Content" class="text-danger"></span>
+    </div>
+    <div class="col-md-12">
+        <div class="form-group col-md-8">
+            <input type="submit" value="Save" class="btn btn-success" />
+        </div>
+        <div class="col-md-4 pull-right">
+            <dl class="dl-horizontal">
+
+                <dt>
+                    @Html.DisplayNameFor(model => model.Article.CreatedDate)
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Article.CreatedDate)
+                </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Article.UpdateDate)
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Article.UpdateDate)
+                </dd>
+            </dl>
+        </div>
     </div>
 </form>
-
 
 <div>
     <a asp-action="Index">Back to List</a>
@@ -51,7 +76,6 @@
     <script type="text/javascript">CKEDITOR.config.skin = 'kama'</script>
     <script type="text/javascript">CKEDITOR.config.language = 'az'</script>
     <script type="text/javascript">CKEDITOR.config.height = '350'</script>
-    <script type="text/javascript">CKEDITOR.config.filebrowserImageUploadUrl = "../wwwroot"</script>
 
     <script>
         function readURL(input) {
