--- a/Views/Blogs/Index.cshtml
+++ b/Views/Blogs/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<BrainStorm.Models.Article>
+﻿@model IEnumerable<BrainStorm.ViewModel.ArticlesViewModel>
 
 @{
     ViewData["Title"] = "Index";
@@ -14,13 +14,10 @@
                 @Html.DisplayNameFor(model => model.Title)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.URL)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.Row)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ArticleCategory)
+                @Html.DisplayNameFor(model => model.Category.First().Name)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.CreatedDate)
@@ -42,13 +39,10 @@
                     @Html.DisplayFor(modelItem => item.Title)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.URL)
-                </td>
-                <td>
                     @Html.DisplayFor(modelItem => item.Row)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.ArticleCategory)
+                    @Html.DisplayFor(modelItem => item.Category.First().Name)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.CreatedDate)
